Fix Banner Navigation White Space Issue

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -18610,7 +18610,7 @@ h6.designation {
   margin: 20px 10px 0 5px;
   transition: all 300ms ease;
 }
-.blog-menu .navigation > li:nth-child(3)::before {
+.blog-menu .navigation > li:nth-child(4)::before {
   content: "\f107";
   font-family: "Font Awesome 5 Free";
   font-weight: 900;
